--- a/frontend/src/styles/Post.css
+++ b/frontend/src/styles/Post.css
@@ -1,4 +1,4 @@
-.Article {
+.Post {
     width: 100%;
     min-height: 100vh;
     display: flex;
@@ -10,12 +10,12 @@
     font-family: 'Source Sans Pro', sans-serif;
     line-height: 1.6;
     color: var(--text);
+    background-color: var(--background);
 }
 
-.Article main {
+.Post main {
     flex-grow: 1;
     padding-top: 80px; /* Space for fixed navbar */
-    background-color: #f5f7fa;
 }
 
 /* Article Detail Page */
@@ -28,7 +28,7 @@
     min-width: 300px;
     max-width: 800px;
     margin: 30px auto;
-    background-color: var(--background);
+    background-color: var(--background-dark);
     padding: 40px;
     border-radius: 8px;
 }
